@@ -1,0 +1,3 @@
+Before (<%= name %>)
+<%= yield %>
+After
