@@ -1,0 +1,1 @@
+Inside from partial (<%= name %>)
